[package]
name = "lpp-timetable-recorder"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Simon GoriÄar <simon.peter.goricar@gmail.com>"]
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = "0.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
humantime = "2.1.0"
miette = { version = "5.10.0", features = ["fancy"] }
reqwest = { version = "0.11.22", features = ["gzip", "json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_with = { version = "3.4.0", features = ["chrono_0_4"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.4"
tracing = "0.1.40"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
unicode-segmentation = "1.10.1"
url = { version = "2.4.1", features = ["serde"] }
